# toaru-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
doc/: physics_system.md
doc/changelog/: 2019.3.5.md
doc/paper/: sample.tex
lab/texture-filling/: index.html  readme.md
old/src-old/intern/adhoc/raytrace/: box_tree_node.cpp
old/src-old/intern/adhoc/script/: toggle.cpp
old/src-old/intern/image/: cube_map.cpp
old/src-old/intern/object/: mesh.cpp
old/src-old/intern/object/primitive/: cube.cpp  plane.cpp
old/src-old/intern/utility/: init.cpp  shader.cpp
old/src-old/intern/viewer/: camera.cpp  context.cpp  scene.cpp
old/test-old/assimp/: readme.md  teapot_renderer.cpp
old/test-old/file/: path_test.cpp
old/test-old/image/: CMakeLists.txt  colors_test.cpp  cube_map_iteration_test.cpp
old/test-old/infra/: first_person_camera_test.cpp  third_person_camera_test.cpp
old/test-old/raytrace/: CMakeLists.txt
python/: pympm.cpp
res/model/: simp_desk.ply
res/model/work/: simp_desk.blend
res/scene/: readme.md  teapot_scene.json
res/shader/: colored_point_cloud.frag.glsl  colored_point_cloud.vert.glsl  default.frag.glsl  default.vert.glsl  plain_color.frag.glsl  plain_color.vert.glsl  plain_texture.frag.glsl  plain_texture.vert.glsl  point_cloud.vert.glsl  sh_sphere.frag.glsl  sh_sphere.vert.glsl  sky_box.frag.glsl  sky_box.vert.glsl
script/: add_clang_format_ignore.py  generate_header.py
script/blender/: create_vertices.py  insert_keyframe.py  insert_shape_keys.py  load_keyframes.py
script/cmake/: check_library.cmake  copy_res.cmake
script/hooks/: pre-commit
src-old/intern/adhoc/raytrace/: bounding_box.cpp  triangle.cpp
src-old/intern/adhoc/script/: first_person_camera.cpp  third_person_camera.cpp
src-old/intern/image/: image.cpp  texture_2d.cpp
src-old/intern/object/adhoc/: point_cloud.cpp
src-old/intern/object/assimp/: assimp_node.cpp
src-old/intern/utility/: math.cpp  path.cpp  sampler.cpp
src/intern/adhoc/raytrace/: box_tree_mesh.cpp  intersection.cpp  ray.cpp
src/intern/adhoc/script/: rotator.cpp
src/intern/camera/: third_person_camera.cpp  two_point_camera.cpp
src/intern/core/: camera.cpp  canvas.cpp  component.cpp  context.cpp  entity.cpp  init.cpp  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  viewer.cpp
src/intern/image/: texture.cpp  texture_rect.cpp
src/intern/material/: lambertian.cpp
src/intern/mesh/: cube.cpp  plane.cpp  point_cloud.cpp  sphere.cpp
src/intern/mpm/: Cell.cpp  Grid.cpp  Particle.cpp  cell.cpp  grid.cpp  particle.cpp  system.cpp
src/intern/object/: object.cpp
src/intern/object/adhoc/: colored_point_cloud.cpp  sky_box.cpp
src/intern/object/assimp/: assimp_mesh.cpp  assimp_object.cpp
src/intern/object/primitive/: sphere.cpp
src/intern/physics/: aabb.cpp  aabb_tree.cpp  aabb_tree_node.cpp  collision.cpp  convex_hull.cpp  face.cpp  material_tensor.cpp  physics_material.cpp  physics_object.cpp  physics_system.cpp  point.cpp  ray.cpp  tetrahedron.cpp  world.cpp
src/intern/physics/field/: gravity.cpp
src/intern/renderer/: aabb_renderer.cpp  mesh_renderer.cpp  physics_system_renderer.cpp  point_cloud_renderer.cpp
src/intern/utility/: math.cpp  path.cpp  script.cpp  transform.cpp
src/intern/viewer/: camera.cpp  canvas.cpp  viewer.cpp
test/: readme.md
test-old/raytrace/: intersection_test.cpp
test/assimp/: CMakeLists.txt  teapot_scene.cpp
test/collision/: aabb_visualization.cpp  jelly_aabb.cpp
test/image/: cube_map_test.cpp  image_test.cpp  plain_texture_test.cpp
test/infra/: cube_rotator.cpp  cube_viewer.cpp  init_viewer.cpp  key_test.cpp  mesh_viewer.cpp  test_eigen.cpp  third_person_viewer.cpp
test/mpm/: CMakeLists.txt  mpm_block.cpp  mpm_output.cpp  mpm_snowball.cpp  mpm_system.cpp  point_cloud_test.cpp
test/physics/: cube_system.cpp  cubes.cpp  jelly_system.cpp  readme.md  simple_tetra.cpp  tofu_system.cpp
test/raytrace/: shading_teapot.cpp
